# core

./: .editorconfig  CMakeLists.txt  init_compile_commands.sh
include/: t.h
src/: TMap.c  t.c  tDestroy.c  tInit.c  tRegisterPlugin.c  tStart.c  t_internal.h  util.c  util.h
